--- a/app/src/main/res/layout/activity_current.xml
+++ b/app/src/main/res/layout/activity_current.xml
@@ -5,5 +5,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CurrentActivity">
+<!--
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="wrap_content"
+        android:layout_height="230dp"
+        android:orientation="vertical"
+        tools:context="at.telvla.cricket.CurrentNews">
+        <android.support.v4.view.ViewPager
+            android:id="@+id/container"
+            android:layout_width="match_parent"
+            android:layout_height="230dp"
+            />
+    </LinearLayout>
+-->
+    <RelativeLayout
+        android:layout_marginTop="300dp"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:id="@+id/RelGameboard">
+    </RelativeLayout>
+
+
 
 </android.support.constraint.ConstraintLayout>
