--- a/app/src/main/res/layout/activity_current.xml
+++ b/app/src/main/res/layout/activity_current.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CurrentActivity">
-<!--
+
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="wrap_content"
@@ -18,7 +18,7 @@
             android:layout_height="230dp"
             />
     </LinearLayout>
--->
+
     <RelativeLayout
         android:layout_marginTop="300dp"
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -29,6 +29,32 @@
         android:id="@+id/RelGameboard">
     </RelativeLayout>
 
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginTop="250dp"
+        android:orientation="vertical"
+        tools:context="at.telvla.cricket.CurrentNews">
+
+        
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Заголовок"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Адрес"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Телефон"/>
 
 
+
+
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
