--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -2,7 +2,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-
         <fragment xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:map="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
@@ -11,11 +10,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".MapsActivity" />
-
         <LinearLayout
             android:id="@+id/linbox"
             android:layout_width="fill_parent"
             android:layout_height="250dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
             android:layout_weight="1"
             android:layout_alignParentBottom="true"
             android:background="#fff"
@@ -23,159 +23,125 @@
             android:orientation="vertical"
             android:layout_gravity="center_horizontal|bottom"
             >
-
-                <TextView
-                    android:id="@+id/title"
-                    android:layout_width="match_parent"
+                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text=""
-                    android:textSize="15dp"/>
-
-                <TextView
-                    android:id="@+id/addres"
-                    android:layout_width="match_parent"
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:layout_marginTop="-85dp"
+                    >
+                        <TextView
+                            android:id="@+id/title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="20dp"
+                            android:layout_marginTop="1dp"
+                            android:layout_marginLeft="10dp"
+                            android:textSize="18dp"
+                            android:textColor="#000"
+                            />
+                </LinearLayout>
+                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text=""
-                    android:textSize="15dp"/>
-
-                <TextView
-                    android:id="@+id/phone"
-                    android:layout_width="match_parent"
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:layout_marginTop="15dp"
+                    >
+                        <android.support.v7.widget.AppCompatImageView
+                            android:id="@+id/iv_addres"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:layout_centerHorizontal="true"
+                            android:layout_centerVertical="true"
+                            app:srcCompat="@drawable/ic_home_black_24dp"
+                            />
+                        <TextView
+                            android:id="@+id/addres"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="1dp"
+                            android:layout_marginLeft="10dp"
+                            android:textSize="15dp"
+                            ></TextView>
+                </LinearLayout>
+                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text=""
-                    android:textSize="15dp"/>
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:layout_marginTop="15dp"
+                    >
+                        <android.support.v7.widget.AppCompatImageView
+                            android:id="@+id/iv_phone"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:layout_centerHorizontal="true"
+                            android:layout_centerVertical="true"
+                            app:srcCompat="@drawable/ic_call_black_24dp"
+                            />
+                        <TextView
+                            android:id="@+id/phone"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="1dp"
+                            android:layout_marginLeft="10dp"
+                            android:textSize="15dp"
+                            ></TextView>
+                </LinearLayout>
 
-                <TextView
-                    android:id="@+id/time_work"
-                    android:layout_width="match_parent"
+                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text=""
-                    android:textSize="15dp"/>
-
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:layout_marginTop="15dp"
+                    >
+                        <android.support.v7.widget.AppCompatImageView
+                            android:id="@+id/iv_time"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:layout_centerHorizontal="true"
+                            android:layout_centerVertical="true"
+                            app:srcCompat="@drawable/ic_access_time_black_24dp"
+                            />
+                        <TextView
+                            android:id="@+id/time_work"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="1dp"
+                            android:layout_marginLeft="10dp"
+                            android:textSize="15dp"
+                            ></TextView>
+                </LinearLayout>
         </LinearLayout>
-
         <LinearLayout
-            android:id="@+id/lin"
+            android:id="@+id/lin_bot"
             android:layout_width="fill_parent"
             android:layout_height="50dp"
             android:layout_weight="1"
-            android:layout_marginBottom="250dp"
+            android:layout_marginBottom="225dp"
             android:layout_alignParentBottom="true"
-            android:layout_gravity="center_horizontal|bottom"
+            android:gravity="center"
+            android:layout_gravity="center_horizontal|bottom|center"
             >
                 <ImageButton
                     android:id="@+id/close"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:background="@drawable/ripple_oval"
                     android:elevation="8dp"
+                    android:layout_marginRight="40dp"
                     />
-
                 <ImageButton
                     android:id="@+id/current"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:background="@drawable/ripple_oval"
                     android:elevation="8dp"
+                    android:layout_marginRight="40dp"
                     />
-
                 <ImageButton
                     android:id="@+id/get_directions"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:background="@drawable/ripple_oval"
                     android:elevation="8dp"
                     />
         </LinearLayout>
 </FrameLayout>
-
-
-
-<!--
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-
-        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:map="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/map"
-            android:name="com.google.android.gms.maps.SupportMapFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:context=".MapsActivity" />
-
-        <LinearLayout
-            android:id="@+id/linbox"
-            android:layout_width="fill_parent"
-            android:layout_height="250dp"
-            android:layout_weight="1"
-            android:layout_alignParentBottom="true"
-            android:background="#fff"
-            android:orientation="vertical"
-            >
-
-                <ImageButton
-                    android:id="@+id/close"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:background="@drawable/ripple_oval"
-                    android:elevation="8dp"
-                    />
-
-                <ImageButton
-                    android:id="@+id/current"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:background="@drawable/ripple_oval"
-                    android:elevation="8dp"
-                    />
-
-                <ImageButton
-                    android:id="@+id/get_directions"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:background="@drawable/ripple_oval"
-                    android:elevation="8dp"
-                    />
-
-                <TextView
-                    android:id="@+id/title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text=""
-                    android:textSize="15dp"/>
-
-                <TextView
-                    android:id="@+id/addres"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text=""
-                    android:textSize="15dp"/>
-
-                <TextView
-                    android:id="@+id/phone"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text=""
-                    android:textSize="15dp"/>
-
-                <TextView
-                    android:id="@+id/time_work"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text=""
-                    android:textSize="15dp"/>
-
-        </LinearLayout>
-</RelativeLayout>
--->
